<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_catalogue"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.catalogue.CatalogueFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_catalogue"
        style="@style/RecyclerView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:minHeight="1000dp"
        tools:listitem="@layout/item_catalogue"/>

</androidx.constraintlayout.widget.ConstraintLayout>